--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -685,7 +685,7 @@ function drawProject(microProjectData, r){
     $('form#post_comment')
             .bind("ajax:beforeSend", toggleLoading)
             .bind("ajax:success", function(){toggleLoading();window.alert("Thank you for submitting a comment.\n\nIf you opted to geo-tag your comment, it will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")})
-            .bind("ajax:failure", function(){toggleLoading();window.alert("Sorry, something went wrong. Please try again later.")})
+            .bind("ajax:error", function(){toggleLoading();window.alert("Sorry, something went wrong. Please try again later.")})
 //Slide Results Panel
     slideResults()
     r.resolve();
@@ -981,7 +981,7 @@ function openRightClickMap(e){
         $('form#post_suggestion')
                 .bind("ajax:beforeSend", toggleLoading)
                 .bind("ajax:success", function(){toggleLoading();window.alert("Thank you for suggesting a project.\n\nYour project will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")})
-                .bind("ajax:failure", function(){toggleLoading();window.alert("Sorry, something went wrong. Please try again later.")})
+                .bind("ajax:error", function(){toggleLoading();window.alert("Sorry, something went wrong. Please try again later.")})
     });
 };
 function openRightClickMarkers(e){
@@ -1085,7 +1085,7 @@ function openRightClickMarkers(e){
         $('form#post_suggestion')
                 .bind("ajax:beforeSend", toggleLoading)
                 .bind("ajax:success", function(){toggleLoading();window.alert("Thank you for suggesting a project.\n\nYour project will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")})
-                .bind("ajax:failure", function(){toggleLoading();window.alert("Sorry, something went wrong. Please try again later.")})
+                .bind("ajax:error", function(){toggleLoading();window.alert("Sorry, something went wrong. Please try again later.")})
     });
 };
 function openRightClickCluster(e){
