--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,78 +6,33 @@
 
 
 <div class='row-fluid' id='home_first_row' >
+  <%= image_tag("map_thin.png")%>
+</div>
+
+<div class='row-fluid' style="margin: 10px 0px 10px 0px;">
   <div class='span6'>
 
     <%= render "home_media_viewer" %>
 
   </div>
-  <div id='stats-box' class='span6 container-fluid'>
-
-    <div class='row-fluid'>
-      <div class=''>
-        <%= 
-          render 'vital_stats' 
-        %>
-      </div>
+    <div class='span6 container-fluid'>
+      <span class='span4' style='width:100% !important;margin-left:0px !important;'>
+        <h4>
+          <%= link_to "How to Use the Data", content_by_name_path("using_the_data"), class: "btn btn-large btn-info btn-block  home-button" %>
+        </h4>
+      </span>
+      <span class='span4' style='width:100% !important;margin-left:0px !important;'>
+        <h4>
+          <%=link_to "Help us Improve the Data", content_by_name_path("improving_the_data"), class: "btn btn-large btn-block home-button" %>
+        </h4>
+      </span>
+      <span class='span4' style='width:100% !important;margin-left:0px !important;'>
+        <h4>
+          <%=link_to "Coming Soon: Geocoded Data", content_by_name_path("geocoding"), class: "btn btn-large btn-warning btn-block home-button" %>
+        </h4>
+      </span>
     </div>
-    <div class='row-fluid'>
-      <div class=' alert alert-warning'>
-        <%= render 'shared/recent'
-         %>
-      </div>
-    </div>
-  </div>
 </div>
-
-<div class='row-fluid' style="margin: 10px 0px 10px 0px;">
-  <span class='span4'>
-    <h4>
-      <%= link_to "How to Use the Data", content_by_name_path("using_the_data"), class: "btn btn-large btn-info btn-block  home-button" %>
-    </h4>
-  </span>
-  <span class='span4'>
-    <h4>
-      <%=link_to "Help us Improve the Data", content_by_name_path("improving_the_data"), class: "btn btn-large btn-block home-button" %>
-    </h4>
-  </span>
-  <span class='span4'>
-    <h4>
-      <%=link_to "Coming Soon: Geocoded Data", content_by_name_path("geocoding"), class: "btn btn-large btn-warning btn-block home-button" %>
-    </h4>
-  </span>
-</div>
-
-<div class='row-fluid home_thumbnails'>
-  <ul class='thumbnails '>
-    <li class='span3'>
-      <a href="<%= bubbles_path %>" class="thumbnail with_shadow">
-        <h4>See the Big Picture &rarr;</h4>
-        <%= image_tag("bubble_button.jpg", :alt => "Bubble Chart") %>
-        
-        
-      </a>
-    </li>
-    <li class='span3'>
-      <a href="<%= map_path %>" class="thumbnail with_shadow">
-        <h4>Country-Level Perspective &rarr;</h4>
-        <%= image_tag("map_button.png", :alt => "Map Overlay") %>
-      </a>
-    </li>
-    <li class='span3' id='project_button' >
-      <a href="<%= projects_path %>" class="thumbnail with_shadow">
-        <h4>Project-Level Data &rarr;</h4>
-        <%= image_tag("project_button_small.jpg", :alt => "Project Pages") %>
-      </a>
-    </li>
-    <li class='span3'>
-      <a href="<%= content_by_name_path("downloads") %>" class="thumbnail with_shadow">
-        <h4>Download Data &rarr;</h4>
-        <%= image_tag("aggregate_button.jpg", :alt => "Downloads") %>
-      </a>
-    </li>
-  </ul>
-</div>
-
 <div class='row-fluid' id='home_media'>
   <div class='span12 row-fluid well'>
     <div class='span4'>
@@ -93,10 +48,21 @@
       <%= render '/shared/twitter' %>
     </div>
     <div class='span4'>
-      <h3>
-        Publications:
-      </h3>
-      <%= render 'latest_publications' %>
+      <div id='stats-box'>
+        <div class='row-fluid'>
+          <div class=''>
+            <%= 
+              render 'vital_stats' 
+            %>
+          </div>
+        </div>
+        <div class='row-fluid'>
+          <div class=' alert alert-warning'>
+            <%= render 'shared/recent'
+             %>
+          </div>
+        </div>
+      </div>
     </div>
   </div>  
 </div>
