--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -2,6 +2,7 @@
 <%= javascript_include_tag   "humanity_united/mapbox" %>
 <%= javascript_include_tag   "humanity_united/jquery-ui-1.10.4.custom.min" %>
 <%= javascript_include_tag   "humanity_united/leaflet.markercluster-src" %>
+<%= javascript_include_tag   "humanity_united/geoLERN" %>
 <%= stylesheet_link_tag "humanity_united/mapbox" %>
 <%= stylesheet_link_tag "humanity_united/ui-lightness/jquery-ui-1.10.4.custom.min" %>
 <%= stylesheet_link_tag "humanity_united/MarkerCluster.Default" %>
@@ -316,6 +317,16 @@ function setParams(params){
 </div>
 <script>
 //Set-up layers
+    var LERN =  L.markerClusterGroup();
+        for (var i = 0; i < LERNdata.features.length; i++) {
+                var a = LERNdata.features[i];
+                var marker = L.marker(new L.LatLng(a.geometry.coordinates[1], a.geometry.coordinates[0]));
+                var catStr = "";
+                for(var j = 0;j< a.properties.categories.length;j++){catStr+= a.properties.categories[j]+"; ";};
+                var popupText = "<b>Title: </b>"+ a.properties.title+"<br><b>Date: </b>"+ new Date(Date.parse(a.properties.date)).toDateString()+"<br><b>Location: </b>"+ a.properties.geoname+"<br><b>Categories: </b>"+ catStr+"<br><br><b>Description: </b>"+ a.properties.description
+                marker.bindPopup(popupText);
+                LERN.addLayer(marker);
+            };
     var MapQuest = L.tileLayer('http://otile{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpeg', {
                 attribution: 'Tiles by <a href="http://www.mapquest.com/">MapQuest</a> &mdash; Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
                 subdomains: '1234',
@@ -412,6 +423,7 @@ $('.leaflet-control-layers-base').append("<label><input type='radio' id='acledBa
 $('.leaflet-control-layers-base').append("<label><input type='radio' id='usgsBase'><span> Minerals and Mines</span></label>")
 $('.leaflet-control-layers-base').append("<hr>")
 $('.leaflet-control-layers-base').append("<label><input type='checkbox' checked='true' id='projectOverlay'><span> Project Geocodes</span></label>")
+$('.leaflet-control-layers-base').append("<label><input type='checkbox' id='LERNOverlay'><span> LERN</span></label>")
 $('.leaflet-control-layers-base').append("<label><input type='checkbox' id='commentOverlay'><span> Comments</span></label>")
 $("#noBase").change(function(){
     var onOff = $("input#noBase:checked").length;
@@ -518,6 +530,14 @@ $("#projectOverlay").change(function(){
         map.addLayer(markers)
     }else{
         map.removeLayer(markers)
+    }
+});
+$("#LERNOverlay").change(function(){
+    var onOff = $("input#LERNOverlay:checked").length;
+    if(onOff==1){
+        map.addLayer(LERN)
+    }else{
+        map.removeLayer(LERN)
     }
 });
 $("#commentOverlay").change(function(){
